syntax="proto3";

package comment;

option go_package="/comment";

import "idl/douyin/common.proto";
import "idl/google/api/annotations.proto";

message CommentActionRequest {
  int64 video_id = 1;
  int64 action_type = 2;
  string comment_text = 3;
  int64 comment_id = 4;
  int64 user_id = 5;
}

message CommentActionResponse {
  Comment comment = 1;
}

message Comment {
  int64 id = 1; // video comment id
  common.User user =2; // comment user information
  string content = 3; // comment
  string create_date = 4; // comment publication date, format mm-dd
}

message CommentListRequest {
  int64 video_id = 1;
}

message CommentListResponse {
  repeated Comment comment_list = 1;
}

message CommentCountRequest {
  int64 video_id = 1;
}

message CommentCountResponse {
  int64 count = 1;
}

service CommentService {
  rpc CommentAction(CommentActionRequest) returns (CommentActionResponse) {
    option (google.api.http) = {
      post: "/api/comment/action"
      body: "*"
    };
  }
  rpc CommentList(CommentListRequest) returns (CommentListResponse) {
    option (google.api.http) = {
      get: "/api/comment/list"
    };
  }
  rpc CommentCount(CommentCountRequest) returns (CommentCountResponse);
}